src/style.scss
@import '../node_modules/bulma/bulma.sass';

// My colors
$blue-light: hsl(217, 71%, 70%);

body {
    // Make transition from light/dark mode less jarring when flipping back and forth
    height: 100vh;
    transition: all 0.4s ease;
}
body.dark {
    background-color: $black;
}

section.dark {
    background-color: $black;
    color: $light;
}

section.dark .box {
    background-color: $dark;
    color: $light;
}

section.dark .title {
    color: $light;
}
section.dark .subtitle {
    color: $light;
}
section .tag {
    background-color: $grey-lighter;
    color: $dark;
}
section.dark .tag {
    background-color: $grey-dark;
    color: $light;
}
section.dark a {
    color: $blue-light;
}
section.dark a:hover {
    color: $light;
}

input[type=checkbox] {
    appearance: none;
    width: 18px;
    height: 18px;
    border: solid 1px $grey-light;
    margin-right: 8px;
    position: relative;
    vertical-align: -3px;
}

input[type=checkbox]:checked::before {
    content: "";
    width: 12px;
    height: 12px;
    background-color: $blue;
    position: absolute;
    top: 2px;
    left: 2px;
}

section.dark input[type=checkbox]:checked::before {
    background-color: $blue-light;
}

.modal-card-body.dark {
    background-color: $dark;
    color: $light;
}

.modal-card-body.dark a {
    color:$light;
    background-color:$dark;
}

.modal-card-body.dark a:hover {
    color:$light;
    background-color:$grey-dark;
}

.modal-card-body.dark li.is-active a {
    color:$dark;
    background-color:$blue-light;
}

.modal-card-body.dark li.is-active a:hover {
    color:$dark;
    background-color:$blue-light;
}

.modal-card-body.dark textarea {
    color:$light;
    background-color:$dark;
}

.modal-card-body.dark textarea::placeholder {
    color:$grey;
}

.modal-card-body.dark input[type=email] {
    color:$light;
    background-color:$dark;
}

.modal-card-body.dark input[type=email]::placeholder {
    color:$grey;
}

